@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.0b7
 
+	- Mac Cursor Shapes added
 	- More documentation updates...
 	- Fl_Text_Display would lockup when all text was
 	  deleted; for example, when running the editor
